# RUST-LRN

./: CLAUDE.md  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
exercitii/: Cargo.toml
exercitii/src/: main.rs
grrs/: Cargo.toml  test.txt
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
invatare/: cheatsheet.md  exercitii_de_gandire_low_level.md  proiecte_backend.md
lowlevel/: Cargo.toml
lowlevel/src/: main.rs
notes/: 01_ownership_borrowing.md  02_functions.md  03_structs.md  04_enums.md  05_result_option.md  06_collections.md  07_files_io.md  08_closures.md  notite_complete.md
shell-rs/: Cargo.toml
shell-rs/src/: main.rs
src/: main.rs
